--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.1.4",
     "next-router-mock": "^0.9.13",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6"
