--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@tanstack/react-query": "^5.51.1",
+    "axios": "^1.7.2",
     "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^11.2.12",
     "next": "14.1.4",
@@ -25,7 +26,8 @@
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-query": "^3.39.3",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "typeit": "^8.8.3"
   },
   "devDependencies": {
     "@types/node": "^20",
