--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-router-mock": "^0.9.13",
     "nodemailer": "^6.9.14",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
@@ -27,12 +28,14 @@
     "react-loader-spinner": "^6.1.6",
     "react-query": "^3.39.3",
     "react-toastify": "^10.0.5",
-    "typeit": "^8.8.3"
+    "typeit": "^8.8.3",
+    "typeit-react": "^2.7.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
